Simplified code with \rlap

--- a/native-spaces.tex
+++ b/native-spaces.tex
@@ -117,7 +117,7 @@ $$
 and  $F_Φ$ is dense in~$\Cal N_Φ$.  Moreover, the inner product~$\form\cdot\cdot_{\Cal N_Φ}$ and hence the corresponding norm~$\norm{\cdot}_{\Cal N_Φ}$ by definition extend respectively the inner product and the norm of~$F_Φ$---we can again denote them   as $\form\cdot\cdot_Φ$ and~$\norm\cdot_Φ$  for simplicity.  Finally, the point evaluation functionals, previously defined only on~$F_Φ$, can be naturally extended to all of~$\Cal N_Φ$, preserving their continuity.  In fact, if $f\in\Cal N_Φ$, then 
 $$
 \eqalign{ \delta_x(f)&\coloneq\form{Φ(\cdot, x)} f_Φ \cr
-                                       &= \form{R(A(Φ(\cdot, x))}{R(b)}_Φ\hbox to 0pt{, \quad for some~$b\in\Cal F_Φ$\hss} \cr
+                                       &= \form{R(A(Φ(\cdot, x))}{R(b)}_Φ\rlap{, \quad for some~$b\in\Cal F_Φ$} \cr
                                        &= \form{A(Φ(\cdot,x))}b_Φ \cr
                                        &=(Rb)(x) = f(x)\mathbox.
 }
