Changed name to the macro file for the thesis

--- a/tesi.tex
+++ b/tesi.tex
@@ -1,6 +1,6 @@
 \useOpTeX  % We are using OpTeX, not LaTeX :)
 
-\load[patches, tesimac]
+\load[patches, thesismac]
 
 \hyperlinks \Black \Black
 \outlines 1
