--- a/error-estimates.tex
+++ b/error-estimates.tex
@@ -98,7 +98,7 @@ From~\ref[pow2] it follows that
 $$
 0\leq P_X(x) \leq \sqrt{Φ(x,x)},
 $$
- because of the positive definiteness of the matrix~$A$.  Additionally, the evaluation of $P_X$ at the data sites gives
+ because of the positive definiteness of the matrix~$\Bm A$.  Additionally, the evaluation of $P_X$ at the data sites gives
  $$
 \eqalign{P_X(x_j) &= \sqrt{Φ(\smash{x_j}, \smash{x_j}) - \Bm u(\smash{x_j})^T\!\Bm A\,\Bm u(\smash{x_j})} \cr
 			      &= \sqrt{Φ(\smash{x_j}, \smash{x_j})- \smash{A_{j,j}}} = 0.}
