--- a/thesismac.tex
+++ b/thesismac.tex
@@ -36,9 +36,9 @@
 \def\opnorm#1{|\mskip-3.5mu|\mskip-3.5mu|#1|\mskip-3.5mu|\mskip-3.5mu|}
 \def\R{\BbbR}
 \def\N{\BbbN}
-\def\form#1#2_#3{(\,#1\,,\,#2\,)_{#3}}
-\def\bform#1#2_#3{\bigl(\,#1\,,\,#2\,\bigr)_{#3}}
-\def\Bform#1#2_#3{\biggl(\,#1\,,\,#2\,\biggr)_{#3}}
+\def\form#1#2{(\,#1\,,\,#2\,)}
+\def\bform#1#2{\bigl(\,#1\,,\,#2\,\bigr)}
+\def\Bform#1#2{\biggl(\,#1\,,\,#2\,\biggr)}
 
 
 
