--- a/thesismac.tex
+++ b/thesismac.tex
@@ -33,6 +33,7 @@
 \def\Bbchar#1{{\bbchar #1}}
 \def\norm#1{\Vert #1\Vert}
 \def\bnorm#1{\bigl\Vert #1\bigr\Vert}
+\def\Bnorm#1{\biggl\Vert #1\biggr\Vert}
 \def\opnorm#1{|\mskip-3.5mu|\mskip-3.5mu|#1|\mskip-3.5mu|\mskip-3.5mu|}
 \def\R{\BbbR}
 \def\N{\BbbN}
