Added little space

--- a/native-spaces.tex
+++ b/native-spaces.tex
@@ -136,13 +136,13 @@ $$
 If $x,y$ are points in~$\Omega$ and $f$~is a function in the native space, then
 $$
 \eqalign{
-|\.f(x)-f(y)|&=|\form{Φ(\cdot,x)}{f}_Φ - \form{Φ(\cdot, y)}{f}_Φ| \cr
+|\.f(x)-f(\.y)|&=|\form{Φ(\cdot,x)}{f}_Φ - \form{Φ(\cdot, y)}{f}_Φ| \cr
 	        &=|\form{Φ(\cdot,x)-Φ(\cdot,y)}{f}_Φ|\cr
                  &\leq\norm{Φ(\cdot,x)-Φ(\cdot,y)}_Φ\,\norm{\.f}_Φ \mathbox,}
 $$
 by having applied the Cauchy-Schwarz inequality.  The right term of the inequality tends to zero as~$y\to x$, since the continuity of $Φ$ implies that
 $$
-\lim_{y\to x}\norm{Φ(\cdot,x)-Φ(\cdot,y)}_Φ^2=\lim_{y\to x}\bigl(Φ(x,x)-2Φ(x,y)+Φ(\.y,y)\bigr)=0\mathbox.\eqno\QED
+\lim_{y\to x}\norm{Φ(\cdot,x)-Φ(\cdot,y)}_Φ^2=\lim_{y\to x}\bigl(Φ(x,x)-2\.Φ(x,y)+Φ(\.y,y)\bigr)=0\mathbox.\eqno\QED
 $$
 \postskip 
 
