--- a/tesi.tex
+++ b/tesi.tex
@@ -9,6 +9,8 @@
 \fontfam[EBGaramond]
 %\OpTeX
 
+\def\QED{\Umathchar"0"01"00203B}
+
 \margins/1 a4 (100,95,130,145)pt
 \typosize[12.21/14.5]
 \parindent 1.5em
@@ -16,7 +18,7 @@
 \rulewidth 0.12ex
 
 
-\tocpage
+%\tocpage
 
 
 \sec The interpolation problem
