New section, about what happens to the interpolant when we have more sampled data

--- a/tesi.tex
+++ b/tesi.tex
@@ -37,6 +37,8 @@
 \sec Optimality
 \input optimality
 
+\sec Adding data
+\input adding-data
 
 
 %\sec stability and trade-off principle (Fasshauer)
