No need for the patches on luaotfload with the EBGaramond font

--- a/tesi.tex
+++ b/tesi.tex
@@ -1,6 +1,6 @@
 \useOpTeX  % We are using OpTeX, not LaTeX :)
 
-\load[patches, thesismac]
+\load[thesismac]
 
 \hyperlinks \Black \Black
 \outlines 1
