Improved content readability

--- a/optimality.tex
+++ b/optimality.tex
@@ -25,11 +25,11 @@ $$
 
 With respect to the subspace~$\Cal S_{Φ,\. X}$ of the native space~$\Cal N_Φ$, any function $f\in\Cal N_Φ$ is decomposed into two orthogonal parts: its projection~$s_{X,f}\in\Cal S_{X,f}$ and the interpolation error~$\epsilon_x(\.f) = f-s_{X, f}\in\Cal S_{X,f}^\perp$.  In fact,
 $$
-f = s_{X,f} + \epsilon_x(\.f).
+f = s_{X,f} + (\.f-s_{X, f}).
 $$
 The orthogonality of the two components implies the following {\em Pythagorean identity},
 $$
-\norm{\.f}_Φ^2=\norm{s_{X,f}}_Φ^2+\norm{\epsilon_x(\.f)}^2. \eqmark[pythag]
+\norm{\.f}_Φ^2=\norm{s_{X,f}}_Φ^2+\norm{f-s_{X, f}}^2. \eqmark[pythag]
 $$ 
 
 
