--- a/optimality.tex
+++ b/optimality.tex
@@ -20,7 +20,7 @@ For any~$f\in\Cal N_Φ$ and any set~$X$ of locations, the interpolant~$s_{X,f}\i
 \noindent 
 Alternatively, in an equivalent way, we can also say that  $s_{X,f}$ is the function of~$\Cal S_{Φ,\. X}$ which realises the {\em minimum distance} from~$f$.  Explicitly,
 $$
-\norm{\.f-s_{X,f}}_Φ \leq \norm{\.f-h}_Φ\mathbox{,\quad for all $h\in\Cal S_{Φ,\. X}$.}
+\norm{\.f-s_{X,f}}_Φ \leq \norm{\.f-h}_Φ\mathbox{,\quad for all $h\in\Cal S_{Φ,\. X}$.}\eqmark[mindist]
 $$
 
 With respect to the subspace~$\Cal S_{Φ,\. X}$ of the native space~$\Cal N_Φ$, any function $f\in\Cal N_Φ$ is decomposed into two orthogonal parts: its projection~$s_{X,f}\in\Cal S_{X,f}$ and the interpolation error~$\epsilon_x(\.f) = f-s_{X, f}\in\Cal S_{X,f}^\perp$.  In fact,
