--- a/biblist.bib
+++ b/biblist.bib
@@ -18,6 +18,13 @@ author = {Schaback, Robert},
 year = {1997}
 }
 
+@article{shaback_2006,
+author = {Schaback, Robert and  Werner, J.},
+year = {2006},
+title = {Linearly constrained reconstruction of functions by kernels with applications to machine learning},
+journal = {Advances in Computational Mathematics},
+abstract = {This paper investigates the approximation of multivariate functions from data via linear combinations of translates of a positive definite kernel from a reproducing kernel Hilbert space. If standard interpolation conditions are relaxed by Chebyshev-type constraints, one can minimize the norm of the approximant in the Hilbert space under these constraints. By standard arguments of optimization theory, the solutions will take a simple form, based on the data related to the active constraints, called support vectors in the context of machine learning. The corresponding quadratic programming problems are investigated to some extent. Using monotonicity results concerning the Hilbert space norm, iterative techniques based on small quadratic subproblems on active sets are shown to be finite, even if they drop part of their previous information and even if they are used for infinite data, e.g., in the context of online learning. Numerical experiments confirm the theoretical results.}
+}
 
 
 @book{fasshauer_2007,
@@ -33,7 +40,7 @@ abstract = {Meshfree approximation methods are a relatively new area of research
 
 @book{stein_2009,
  abstract = { Real Analysis is the third volume in the Princeton Lectures in Analysis, a series of four textbooks that aim to present, in an integrated manner, the core areas of analysis. Here the focus is on the development of measure and integration theory, differentiation and integration, Hilbert spaces, and Hausdorff measure and fractals. This book reflects the objective of the series as a whole: to make plain the organic unity that exists between the various parts of the subject, and to illustrate the wide applicability of ideas of analysis to other fields of mathematics and science.    After setting forth the basic facts of measure theory, Lebesgue integration, and differentiation on Euclidian spaces, the authors move to the elements of Hilbert space, via the L2 theory. They next present basic illustrations of these concepts from Fourier analysis, partial differential equations, and complex analysis. The final part of the book introduces the reader to the fascinating subject of fractional-dimensional sets, including Hausdorff measure, self-replicating sets, space-filling curves, and Besicovitch sets. Each chapter has a series of exercises, from the relatively easy to the more complex, that are tied directly to the text. A substantial number of hints encourage the reader to take on even the more challenging exercises.    As with the other volumes in the series, Real Analysis is accessible to students interested in such diverse disciplines as mathematics, physics, engineering, and finance, at both the undergraduate and graduate levels.    Also available, the first two volumes in the Princeton Lectures in Analysis:  },
- author = {Stein, Elias M.},
+ author = {Stein, Elias M. and Shakarchi, Rami},
  publisher = {Princeton University Press},
  title = {Real Analysis: Measure Theory, Integration, and Hilbert Spaces},
  year = {2005}
