Changed format of the bibliography

--- a/tesi.tex
+++ b/tesi.tex
@@ -58,8 +58,8 @@
 % BIBLIOGRAPHY
 \let\_mtext\ignoreit
 \nonum\chap Bibliography
-\def\_opwarning#1{}
-\usebib/s (simple) biblist
+%\def\_opwarning#1{}
+\usebib/s (iso690) biblist
 
 
 \bye
