--- a/biblist.bib
+++ b/biblist.bib
@@ -4,7 +4,6 @@
 place={Cambridge},
 series={Cambridge Monographs on Applied and Computational Mathematics},
 title={Scattered Data Approximation},
-DOI={10.1017/CBO9780511617539},
 publisher={Cambridge University Press},
 author={Wendland, Holger}, 
 year={2004},
@@ -28,7 +27,7 @@ abstract = {This paper investigates the approximation of multivariate functions 
 
 
 @book{fasshauer_2007,
-author = {Fasshauer, Gregory F.},
+author = {Fasshauer, Gregory F},
 title = {Meshfree Approximation Methods with MATLAB},
 year = {2007},
 publisher = {World Scientific Publishing Co., Inc.},
