--- a/native-spaces.tex
+++ b/native-spaces.tex
@@ -21,7 +21,7 @@ Notice that this space is {\em infinite dimensional} if $Φ$ is positive definit
 
 The space~$F_Φ$ may be endowed with the form~$\form\;\;_Φ$ defined by
 $$
-\Bform{\sum_{j=1}^Nα_jΦ(\cdot, x_j)}{\sum_{k=1}^Mβ_kΦ(\cdot,y_k)}_Φ\coloneq \sum_{j=1}^N\sum_{k=1}^Mα_j β_kΦ(x_j,y_k)\mathbox.
+\Bform{\sum_{j=1}^Nα_jΦ(\cdot, x_j)}{\sum_{k=1}^Mβ_kΦ(\cdot,y_k)}_Φ\coloneq \sum_{j=1}^N\sum_{k=1}^Mα_j β_kΦ(x_j,y_k)\mathbox.\eqmark[form]
 $$
 This  form is well defined because the basis functions~$\{Φ(\cdot,y)\}_{y\in\Omega}$ are linearly independent, which implies that each function in~$F_Φ$ can be express  in a {\em unique} way as a finite linear combination of them.
 
