--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 \useOpTeX  % We are using OpTeX, not LaTeX :)
 
-\load[thesismac]
+\load[thesis-mac]
 
 \hyperlinks \Black \Black
 \outlines 1
@@ -31,12 +31,13 @@
 \input native-spaces
 %  Sobolev spaces
 
-\sec Error estimates
+\sec[errorsec] Error estimates
 \input error-estimates
 
 \sec Optimality
 \input optimality
 
+% Monotonicity results
 \sec Adding data
 \input adding-data
 
